fix(vacanciespage): fix scroll only while overflow

--- a/src/components/VacanciesPage/VacanciesPage.scss
+++ b/src/components/VacanciesPage/VacanciesPage.scss
@@ -32,7 +32,6 @@
     margin-left: 12px;
     margin-bottom: 12px;
     position: relative;
-    min-height: calc(100% - 12px);
     height: max-content;
     width: 1024px;
     display: flex;
